--- a/index.html
+++ b/index.html
@@ -82,5 +82,12 @@
  */
 </script>
 
+<audio>
+<source src="click.mp3"></source>
+<source src="click.ogg"></source>
+</audio>
+ 
+<div id="sounddiv"><bgsound id="sound"></div>
+	
 </body>
 </html>
